src/test/ui/coherence/coherence-overlap-negate-alias-strict.stderr
error[E0119]: conflicting implementations of trait `C` for type `u32`
  --> $DIR/coherence-overlap-negate-alias-strict.rs:15:1
   |
LL | impl<T: AB> C for T {}
   | ------------------- first implementation here
LL | #[rustc_strict_coherence]
LL | impl C for u32 {}
   | ^^^^^^^^^^^^^^ conflicting implementation for `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
